Index view and controller for Owners Closes #13

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>List of Vets</title>
+    <title>List of Owners</title>
 </head>
 <body>
-    <h1 th:text="Vets">List of vets</h1>
+    <h1 th:text="Owners">List of owners</h1>
 </body>
 </html>
