--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1 th:text="'Index Page'">Index Page</h1>
+
+    <a href="owners/index.html">owners</a>
+    <a href="vets/index.html">vets</a>
+
 </body>
 </html>
