--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,6 +6,24 @@
     <title>List of Owners</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="springframework.guru.sfgpetclinic.petclinicdata.model.Owner"*/-->
     <h1 th:text="Owners">List of owners</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner?.id}"></td> <!-- ? - null safe operator-->
+            <td th:text="${owner.firstName}"></td>
+            <td th:text="${owner.lastName}"></td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
