--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 
 <head>
     <meta charset="UTF-8">
@@ -9,12 +9,12 @@
 <!--/*@thymesVar id="owner" type="springframework.guru.sfgpetclinic.petclinicdata.model.Owner"*/-->
     <h1 th:text="Owners">List of owners</h1>
 
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <th>id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px">id</th>
+            <th style="width: 150px">First Name</th>
+            <th style="width: 150px">Last Name</th>
         </tr>
         </thead>
         <tbody>
