add layout for vets.html Closes #21

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
         </div>
     </div>
 
-    <a href="owners/index">owners</a>
-    <a href="vets/index">vets</a>
+    <a href="owners/">owners</a>
+    <a href="vets/">vets</a>
 
 </body>
 </html>
