updated profiles for JPA services, tested active profiles Closes #59

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,7 +6,7 @@
     <title>List of Owners</title>
 </head>
 <body>
-<!--/*@thymesVar id="owner" type="springframework.guru.sfgpetclinic.petclinicdata.model.Owner"*/-->
+<!--/*@thymesVar id="owner" type="springframework.guru.sfgpetclinic.model.Owner"*/-->
     <h1 th:text="Owners">List of owners</h1>
 
     <table class="table table-striped">
